diagramengine property works
