# Source/DocuEye.Web/client-app/app/api/docueye-api/models/filtered-view-diagram.ts
@@ -31,6 +31,7 @@ export interface FilteredViewDiagram {
     'key'?: string | null;
     'workspaceId'?: string | null;
     'viewType'?: string | null;
+    'diagramEngine'?: string | null;
     'paperSize'?: string | null;
     'elements'?: Array<ElementView> | null;
     'relationships'?: Array<RelationshipView> | null;
