# Source/DocuEye.Web/client-app/app/api/docueye-api/models/workspace-view.ts
@@ -19,5 +19,6 @@ export interface WorkspaceView {
     'id'?: string | null;
     'name'?: string | null;
     'viewType'?: string | null;
+    'diagramEngine'?: string | null;
 }
 
